--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.1",
     "next": "14.0.3",
