--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.1",
     "next": "14.0.3",
+    "next-auth": "^4.24.5",
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
