--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "framer-motion": "^10.16.16",
     "jquery": "^3.7.1",
     "mongoose": "^8.0.1",
     "next": "14.0.3",
