--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@green-api/whatsapp-bot": "^0.2.5",
+    "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
@@ -18,6 +19,7 @@
     "express": "^4.18.2",
     "framer-motion": "^10.16.16",
     "jquery": "^3.7.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
@@ -29,6 +31,7 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "vercel": "^32.5.6"
   },
