--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
+    "uuid": "^9.0.1",
     "vercel": "^32.5.6"
   },
   "devDependencies": {
