--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coreui/react": "^4.11.1",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@green-api/whatsapp-bot": "^0.2.5",
     "axios": "^1.6.5",
