--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "disqus-react": "^1.1.5",
     "express": "^4.18.2",
     "framer-motion": "^10.16.16",
