--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^4.12.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "react-tsparticles": "^2.12.2",
     "slick-carousel": "^1.8.1",
     "uuid": "^9.0.1",
     "vercel": "^32.5.6"
